fix(condo): DOMA-11992 ui bugs on mobile employee page (#6859)
* fix(condo): DOMA-11992 fix ui bugs in employee page on mobile screen

* fix(condo): DOMA-11992 fix countDown layout

* fix(condo): DOMA-11992 fix stylelint

* fix(condo): DOMA-11992 replace styles in module css

* fix(condo): DOMA-11992 add var for opacity

--- a/apps/condo/pages/employee/[id]/index.module.css
+++ b/apps/condo/pages/employee/[id]/index.module.css
@@ -1,5 +1,6 @@
 .employee-invite-retry-button-container {
   display: flex;
+  flex-wrap: wrap;
   gap: 4px;
   align-items: center;
 }
